# model-relay-desktop

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  cliff.toml  eslint.config.mjs  nuxt.config.ts  package.json  playwright.visual.config.ts  pnpm-lock.yaml  pyrightconfig.json  tsconfig.json  tsconfig.playwright.json
.github/workflows/: build-prerelease-tauri.yml  pr-gate.yml  pr-target-guard.yml  test-tauri-build-win.yml
app/: app.vue
app/assets/css/: tailwind.css
app/components/: AppShell.vue  FooterActions.vue  LogPanel.vue  MtgaToastStack.vue
app/components/tabs/: CertTab.vue  (+3 more)
app/composables/: icons.ts  mtgaSnapshot.ts  mtgaTypes.ts  runtime.ts  themeConfig.ts  useMtgaApi.ts  useMtgaStore.ts  useMtgaToast.ts
app/docs/: ui-migration.md  ui-visual-refresh.md
app/types/: global.d.ts
docs/: README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README_macOS_cli.md  boot-white-screen-analysis.md  deep-research-report.md  startup-diagnostics-notes.md
public/: splashscreen.html
python-src/: pyproject.toml
python-src/docs/: dev-guidelines.md
python-src/modules/actions/: cert_actions.py  hosts_actions.py  model_tests.py  network_actions.py  proxy_actions.py
python-src/modules/cert/: ca_metadata.py  ca_store.py  cert_checker.py  cert_cleaner.py  cert_generator.py  cert_installer.py  cert_utils.py
python-src/modules/hosts/: file_operability.py  hosts_manager.py  hosts_state.py  hosts_text.py
python-src/modules/network/: network_environment.py
python-src/modules/platform/: macos_privileged_helper.py  privileges.py
python-src/modules/proxy/: proxy_app.py  proxy_auth.py  proxy_config.py  proxy_runtime.py  proxy_server.py  proxy_transport.py
python-src/modules/runtime/: operation_result.py  process_utils.py  resource_manager.py  resource_manager_shared.py  thread_manager.py
python-src/modules/services/: app_bootstrap.py  app_metadata.py  cert_service.py  hosts_service.py  logging_service.py  proxy_orchestration.py  startup_checks.py  startup_context.py
python-src/modules/update/: update_checker.py
python-src/mtga_app/: __init__.py
python-src/mtga_app/commands/: cert.py  common.py  hosts.py  logs.py  model_tests.py  proxy.py  startup.py  update.py  user_data.py
scripts/: README.md  ci-gate.mjs  gitflow.mjs  prettier-check-locations.mjs  release-finish.ps1  release-finish.sh  release-push.mjs  rs-check.mjs  run-nuxt-command.mjs  serve-static.mjs  setup-gitflow.sh
src-tauri/: Cargo.toml  app.manifest  installer-hooks.nsh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/visual/: panels.spec.ts
(+17 files in other folders)
